--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Figuras Personalizadas</title>
+    <title>CustomCraft Figures</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather:wght@400;700&display=swap">
 
@@ -11,88 +11,88 @@
 
 <body>
     <header>
-        <h1>Tienda de Figuras Personalizadas</h1>
+        <h1 tabindex="1">CustomCraft Figures</h1>
     </header>
 
     <section id="video">
-        <h2>Conoce Nuestros Productos</h2>
+        <h2 style="color: white;" tabindex="0">Conoce Nuestros Productos</h2>
         <div class="video-container">
-            <iframe width="890" height="500" src="https://www.youtube.com/embed/kFgKYzoRTlw?si=5I15WtBKHrtAp5UN"
-        title="Video promocional de las figuras" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="890" height="500" src="https://epnecuador-my.sharepoint.com/personal/daniel_mera_epn_edu_ec/_layouts/15/embed.aspx?UniqueId=4f27bd85-2bdd-4592-9e1e-e7dd16984ebe&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+        title="Video promocional de las figuras" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen tabindex="0"></iframe>
         </div>
     </section>
 
     <section id="productos">
-        <h2>Nuestros Productos</h2>
+        <h2 tabindex="0">Nuestros Productos</h2>
         <article>
-            <h3>Miniaturas para Juegos de Mesa</h3>
-            <p>Descubre nuestras exquisitas miniaturas diseñadas en una escala base de 42mm para las figuras humanoides de tamaño mediano, ideales para juegos de mesa como Dungeon and Dragons. Cada figura está meticulosamente detallada para mejorar tu experiencia de juego, aportando realismo y emoción a tus aventuras.</p>
+            <h3 tabindex="0">Miniaturas para Juegos de Mesa</h3>
+            <p tabindex="0">Descubre nuestras exquisitas miniaturas diseñadas en una escala base de 42mm para las figuras humanoides de tamaño mediano, ideales para juegos de mesa como Dungeon and Dragons. Cada figura está meticulosamente detallada para mejorar tu experiencia de juego, aportando realismo y emoción a tus aventuras.</p>
             <div class="producto-container">
                 <div class="producto-grid" id="grid-juegos">
-                    <div class="producto-item juegos">
+                    <div class="producto-item juegos" tabindex="0" role="button">
                         <div class="images-change">
-                            <img src="resources/robot_frente.jpg" alt="Miniatura hecha a mano de un robot" class="img-frente">
-                            <img src="resources/robot_atras.jpg" alt="Miniatura hecha a mano de un robot" class="img-detras">
+                            <img src="resources/robot_frente.jpg" alt="Miniatura hecha a mano de un robot." class="img-frente">
+                            <img src="resources/robot_atras.jpg" alt="Miniatura hecha a mano de un robot." class="img-detras">
                         </div>
                         <p>Robot Enano</p>
                     </div>
-                    <div class="producto-item juegos">
+                    <div class="producto-item juegos" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/esqueletos_frente.jpg" alt="Miniaturas hechas a mano de esqueletos" class="img-frente">
                             <img src="resources/esqueletos_atras.jpg" alt="Miniaturas hechas a mano de esqueletos" class="img-detras">
                         </div>
                         <p>Esqueletos Guerreros</p>
                     </div>
-                    <div class="producto-item juegos">
+                    <div class="producto-item juegos" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/arania_frente.jpg" alt="Miniaturas hechas a mano de arañas gigantes" class="img-frente">
                             <img src="resources/arania_atras.jpg" alt="Miniaturas hechas a mano de arañas gigantes" class="img-detras">
                         </div>
                         <p>Arañas Gigantes</p>
                     </div>
-                    <div class="producto-item juegos">
+                    <div class="producto-item juegos" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/slimes_frente.jpg" alt="Miniaturas hechas a mano de slimes ocre" class="img-frente">
                             <img src="resources/slimes_atras.jpg" alt="Miniaturas hechas a mano de slimes ocre" class="img-detras">
                         </div>
                         <p>Ochre Jelly</p>
                     </div>
-                    <div class="producto-item juegos">
+                    <div class="producto-item juegos" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/golem_frente.jpg" alt="Miniatura hecha a mano de un golem de roca" class="img-frente">
                             <img src="resources/golem_atras.jpg" alt="Miniatura hecha a mano de un golem de roca" class="img-detras">
                         </div>
                         <p>Golem de Roca</p>
                     </div>
-                    <div class="producto-item juegos">
+                    <div class="producto-item juegos" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/dragon_frente.jpg" alt="Miniatura hecha a mano de un dragón de hielo" class="img-frente">
                             <img src="resources/dragon_atras.jpg" alt="Miniatura hecha a mano de un dragón de hielo" class="img-detras">
                         </div>
                         <p>Dragón de Hielo</p>
                     </div>
-                    <div class="producto-item juegos">
+                    <div class="producto-item juegos" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/varios_frente.jpg" alt="Miniaturas variadas hechas a mano" class="img-frente">
                             <img src="resources/varios_detras.jpg" alt="Miniaturas variadas hechas a mano" class="img-detras">
                         </div>
                         <p>Minis Variadas</p>
                     </div>
-                    <div class="producto-item juegos">
+                    <div class="producto-item juegos" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/aracne_frente.jpg" alt="Miniatura hecha a mano de una aracne" class="img-frente">
                             <img src="resources/aracne_detras.jpg" alt="Miniatura hecha a mano de una aracne" class="img-detras">
                         </div>
                         <p>Aracne (Proximamente)</p>
                     </div>
-                    <div class="producto-item juegos">
+                    <div class="producto-item juegos" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/porPintar_frente.jpg" alt="Miniaturas variadas para pintar" class="img-frente">
                             <img src="resources/porPintar_atras.jpg" alt="Miniaturas variadas para pintar" class="img-detras">
                         </div>
                         <p>Minis por Pintar 1</p>
                     </div>
-                    <div class="producto-item juegos">
+                    <div class="producto-item juegos" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/porPintar2_frente.jpg" alt="Miniaturas variadas para pintar" class="img-frente">
                             <img src="resources/porPintar2_atras.jpg" alt="Miniaturas variadas para pintar" class="img-detras">
@@ -100,51 +100,51 @@
                         <p>Minis por Pintar 2</p>
                     </div>
                 </div>
-                <button class="nav-button left" onclick="scroll_left('grid-juegos')">&lt;</button>
-                <button class="nav-button right" onclick="scroll_right('grid-juegos')">&gt;</button>
+                <button class="nav-button left" onclick="scroll_left('grid-juegos')" tabindex="0" role="button">&lt;</button>
+                <button class="nav-button right" onclick="scroll_right('grid-juegos')" tabindex="0" role="button">&gt;</button>
             </div>
         </article>
 
         <article>
-            <h3>Figuras de Decoración</h3>
-            <p>Embellece tu hogar con nuestras impresionantes figuras de decoración. Con un tamaño mayor, estas obras de arte están creadas para ser el centro de atención en cualquier habitación, añadiendo un toque único y sofisticado a tu espacio.</p>
+            <h3 tabindex="0">Figuras de Decoración</h3>
+            <p tabindex="0">Embellece tu hogar con nuestras impresionantes figuras de decoración. Con un tamaño mayor, estas obras de arte están creadas para ser el centro de atención en cualquier habitación, añadiendo un toque único y sofisticado a tu espacio.</p>
             <div class="producto-container">
                 <div class="producto-grid" id="grid-decoracion">
-                    <div class="producto-item decoracion">
+                    <div class="producto-item decoracion" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/Mirko_frente.jpg" alt="Figura de Mirko por pintar" class="img-frente">
                             <img src="resources/Mirko_atras.jpg" alt="Figura de Mirko por pintar" class="img-detras">
                         </div>
                         <p>Mirko (Proximamente)</p>
                     </div>
-                    <div class="producto-item decoracion">
+                    <div class="producto-item decoracion" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/ironFist_frente.jpg" alt="Figura de Iron Fist" class="img-frente">
                         </div>
                         <p>Iron Fist</p>
                     </div>
-                    <div class="producto-item decoracion">
+                    <div class="producto-item decoracion" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/goku_frente.jpg" alt="Figura de Goku niño" class="img-frente">
                             <img src="resources/goku_atras.jpg" alt="Figura de Goku niño" class="img-detras">
                         </div>
                         <p>Goku Niño</p>
                     </div>
-                    <div class="producto-item decoracion">
+                    <div class="producto-item decoracion" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/Rias_frente.jpg" alt="Figura de Rias Gremory" class="img-frente">
                             <img src="resources/Rias_atras.jpg" alt="Figura de Rias Gremory" class="img-detras">
                         </div>
                         <p>Rias Gremory</p>
                     </div>
-                    <div class="producto-item decoracion">
+                    <div class="producto-item decoracion" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/Miku_frente.jpg" alt="Figura de Hatsune Miku" class="img-frente">
                             <img src="resources/Miku_atras.jpg" alt="Figura de Hatsune Miku" class="img-detras">
                         </div>
                         <p>Hatsune Miku</p>
                     </div>
-                    <div class="producto-item decoracion">
+                    <div class="producto-item decoracion" tabindex="0" role="button">
                         <div class="images-change">
                             <img src="resources/MikuRosa_frente.jpg" alt="Figura de Miku rosa" class="img-frente">
                             <img src="resources/MikuRosa_atras.jpg" alt="Figura de Miku rosa" class="img-detras">
@@ -152,83 +152,82 @@
                         <p>Miku Rosa</p>
                     </div>
                 </div>
-                <button class="nav-button left" onclick="scroll_left('grid-decoracion')">&lt;</button>
-                <button class="nav-button right" onclick="scroll_right('grid-decoracion')">&gt;</button>
+                <button class="nav-button left" onclick="scroll_left('grid-decoracion')" tabindex="0" role="button">&lt;</button>
+                <button class="nav-button right" onclick="scroll_right('grid-decoracion')" tabindex="0" role="button"">&gt;</button>
             </div>
         </article>
     </section>
 
     <section id="tabla">
-        <h2>Comparativa de Productos</h2>
-        <section id="tabla">
-            <h2>Comparativa de Productos</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Producto</th>
-                        <th>Detalles</th>
-                        <th>Precio</th>
-                        <th>Material</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Miniatura de Juego de Mesa</td>
-                        <td>Tamaño pequeño menor a 35mm</td>
-                        <td>$5</td>
-                        <td>Materiales reciclados (carton, plastico, espuma flex)</td>
-                    </tr>
-                    <tr>
-                        <td>Miniatura de Juego de Mesa</td>
-                        <td>Tamaño mediano entre 35mm a 50mm</td>
-                        <td>$10</td>
-                        <td>Materiales reciclados (carton, plastico, espuma flex)</td>
-                    </tr>
-                    <tr>
-                        <td>Miniatura de Juego de Mesa</td>
-                        <td>Tamaño grande mayor a 50mm</td>
-                        <td>$15</td>
-                        <td>Materiales reciclados (carton, plastico, espuma flex)</td>
-                    </tr>
-                    <tr>
-                        <td>Figura de Decoración</td>
-                        <td>Figura pintada a mano</td>
-                        <td>$20</td>
-                        <td>Plastico impreso en 3D, Arcilla, Cerámica</td>
-                    </tr>
-                    <tr>
-                        <td>Figura de Decoración</td>
-                        <td>Figura hecha y pintada a mano</td>
-                        <td>$30</td>
-                        <td>Arcilla, masilla epóxica</td>
-                    </tr>
-                    <tr>
-                        <td>Figura de Decoración</td>
-                        <td>Figura segunda mano retocada</td>
-                        <td>$20</td>
-                        <td>Plástico</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-        
+        <h2 tabindex="0">Comparativa de Productos</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th tabindex="0">Producto</th>
+                    <th tabindex="0">Detalles</th>
+                    <th tabindex="0">Precio</th>
+                    <th tabindex="0">Material</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td tabindex="0">Miniatura de Juego de Mesa</td>
+                    <td tabindex="0">Tamaño pequeño menor a 35mm</td>
+                    <td tabindex="0">$5</td>
+                    <td tabindex="0">Materiales reciclados (carton, plastico, espuma flex)</td>
+                </tr>
+                <tr>
+                    <td tabindex="0">Miniatura de Juego de Mesa</td>
+                    <td tabindex="0">Tamaño mediano entre 35mm a 50mm</td>
+                    <td tabindex="0">$10</td>
+                    <td tabindex="0">Materiales reciclados (carton, plastico, espuma flex)</td>
+                </tr>
+                <tr>
+                    <td tabindex="0">Miniatura de Juego de Mesa</td>
+                    <td tabindex="0">Tamaño grande mayor a 50mm</td>
+                    <td tabindex="0">$15</td>
+                    <td tabindex="0">Materiales reciclados (carton, plastico, espuma flex)</td>
+                </tr>
+                <tr>
+                    <td tabindex="0">Figura de Decoración</td>
+                    <td tabindex="0">Figura pintada a mano</td>
+                    <td tabindex="0">$20</td>
+                    <td tabindex="0">Plastico impreso en 3D, Arcilla, Cerámica</td>
+                </tr>
+                <tr>
+                    <td tabindex="0">Figura de Decoración</td>
+                    <td tabindex="0">Figura hecha y pintada a mano</td>
+                    <td tabindex="0">$30</td>
+                    <td tabindex="0">Arcilla, masilla epóxica</td>
+                </tr>
+                <tr>
+                    <td tabindex="0">Figura de Decoración</td>
+                    <td tabindex="0">Figura segunda mano retocada</td>
+                    <td tabindex="0">$20</td>
+                    <td tabindex="0">Plástico</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
 
     <footer>
-        <p>&copy; 2024 Tienda de Figuras Personalizadas. Todos los derechos reservados.</p>
+        <p tabindex="0">&copy; 2024 CustomCraft Figures por Daniel Mera - Todos los derechos reservados.</p>
     </footer>
 
         <!-- Modal -->
-    <div id="producto-modal" class="modal hidden">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h2 id="modal-producto-nombre"></h2>
-            <img id="modal-producto-imagen" src="" alt="Imagen del producto">
-            <p id="modal-producto-descripcion"></p>
-            <p id="modal-producto-precio"></p>
+        <div id="producto-modal" class="modal hidden">
+            <div class="modal-content" tabindex="-1">
+                <span class="close-button" tabindex="0">&times;</span>
+                <h2 id="modal-producto-nombre" tabindex="0"></h2>
+                <img id="modal-producto-imagen" src="" alt="Imagen del producto" tabindex="0">
+                <p id="modal-producto-descripcion" tabindex="0"></p>
+                <p id="modal-producto-precio" tabindex="0"></p>
+            </div>
         </div>
-    </div>
+        
 
+    <!-- Elemento invisible para reiniciar el foco -->
+    <div class="hidden-focus" tabindex="0" aria-hidden="true"></div>
 
     <script src="js/scripts.js" defer></script>
 </body>
